[package]
name = "envoy-grpc-ext-proc"
version = "0.1.0"
edition = "2024"
description = "pre-compiled gRPC client and server stubs for the envoy ext_proc protocol"
license = "MIT"

[dependencies]
prost = "0.14"
prost-types = "0.14"
tonic = "0.14"
tonic-prost = "0.14"

[build-dependencies]
tonic-prost-build = "0.14"

[dev-dependencies]
futures = "0.3"
tonic = "0.14"

[dev-dependencies.tokio]
version = "1.47"
features = [
    "macros",
    "rt-multi-thread",
]
