[package]
name = "envoy-grpc-ext-proc"
version = "0.1.1"
edition = "2024"
description = "pre-compiled gRPC client and server stubs for the envoy ext_proc protocol"
license = "MIT"
homepage = "https://github.com/dariocurr/envoy-grpc-ext-proc"
repository = "https://github.com/dariocurr/envoy-grpc-ext-proc"
documentation = "https://docs.rs/envoy-grpc-ext-proc"

[dependencies]
prost = "0.14"
prost-types = "0.14"
tonic = "0.14"
tonic-prost = "0.14"

[build-dependencies]
protoc-bin-vendored = "3.2"
tonic-prost-build = "0.14"

[dev-dependencies]
futures = "0.3"
tonic = "0.14"

[dev-dependencies.tokio]
version = "1.48"
features = [
    "rt-multi-thread",
]

[package.metadata.cargo-udeps.ignore]
development = [
    "futures",
    "tokio",
    "tonic",
]
